out/base/0-example-voting-app-namespace.yaml
#! 0-example-voting-app-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: example-voting-app
    labels:
        com.docker.compose.project: example-voting-app
