out/base/result-expose.yaml
#! result-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: result
    namespace: example-voting-app
    labels:
        com.docker.compose.project: example-voting-app
        com.docker.compose.service: result
spec:
    selector:
        com.docker.compose.project: example-voting-app
        com.docker.compose.service: result
    ports:
        - name: result-80
          port: 80
          targetPort: result-80
        - name: result-9229
          port: 9229
          targetPort: result-9229
