out/base/result-service.yaml
# check if there is at least one published port

#! result-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: result-published
    namespace: example-voting-app
    labels:
        com.docker.compose.project: example-voting-app
        com.docker.compose.service: result
spec:
    selector:
        com.docker.compose.project: example-voting-app
        com.docker.compose.service: result
    ports:
        - name: result-8081
          port: 8081
          protocol: TCP
          targetPort: result-80
        - name: result-9229
          port: 9229
          protocol: TCP
          targetPort: result-9229

# check if there is at least one published port
