out/base/vote-expose.yaml
#! vote-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: vote
    namespace: example-voting-app
    labels:
        com.docker.compose.project: example-voting-app
        com.docker.compose.service: vote
spec:
    selector:
        com.docker.compose.project: example-voting-app
        com.docker.compose.service: vote
    ports:
        - name: vote-80
          port: 80
          targetPort: vote-80
