out/base/back-tier-network-policy.yaml
#! back-tier-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: back-tier-network-policy
    namespace: example-voting-app
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.back-tier: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.back-tier: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.back-tier: "true"
